# BVA-EquivalenceClass

./: CMakeLists.txt  main.cpp
lib/: Date.h  Triangle.h  test.cpp
